--- a/templates/home/register.html.twig
+++ b/templates/home/register.html.twig
@@ -11,15 +11,24 @@
     <div class="auth-page-wrapper">
         <div class="auth-container">
             <h1>Inscription</h1>
+            {% if errors is defined and errors is not empty %}
+                <div class="error-message">
+                    <ul style="list-style: none; margin: 0; padding: 0;">
+                        {% for error in errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            {% endif %}
             <form action="{{ path('app_register') }}" method="post">
                 <div class="form-group">
                     <label for="username">Nom d'utilisateur :</label>
-                    <input type="text" id="username" name="username" required>
+                    <input type="text" id="username" name="username" required value="{{ last_username is defined ? last_username : '' }}">
                 </div>
 
                 <div class="form-group">
                     <label for="email">Email :</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" required value="{{ last_email is defined ? last_email : '' }}">
                 </div>
 
                 <div class="form-group">
