--- a/templates/articles/edit.html.twig
+++ b/templates/articles/edit.html.twig
@@ -1,11 +1,84 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifier l'article{% endblock %}
+{% block title %}Modifier l'Article{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/edit.css') }}">
+{% endblock %}
 
 {% block body %}
-    <h1>Modifier l'article</h1>
+<div class="edit-article-container">
+    <h1>Modifier l'Article</h1>
+
+    {% if article.image is defined and article.image is not empty %}
+        <div class="current-image">
+            <img src="{{ article.image }}" alt="Image actuelle">
+        </div>
+    {% endif %}
+    
     {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button type="submit">Modifier</button>
+        <div class="form-group">
+            {{ form_row(form.nom, {
+                'attr': {'class': 'form-control'},
+                'row_attr': {'class': 'form-group'},
+                'label_attr': {'class': 'form-label'}
+            }) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_row(form.description, {
+                'attr': {'class': 'form-control', 'rows': 4},
+                'row_attr': {'class': 'form-group'},
+                'label_attr': {'class': 'form-label'}
+            }) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_row(form.prix, {
+                'attr': {'class': 'form-control'},
+                'row_attr': {'class': 'form-group'},
+                'label_attr': {'class': 'form-label'},
+                'label': 'Prix'
+            }) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_row(form.categorie, {
+                'attr': {'class': 'form-control'},
+                'row_attr': {'class': 'form-group'},
+                'label_attr': {'class': 'form-label'}
+            }) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_row(form.genre, {
+                'attr': {'class': 'form-control'},
+                'row_attr': {'class': 'form-group'},
+                'label_attr': {'class': 'form-label'}
+            }) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_row(form.stock, {
+                'attr': {'class': 'form-control'},
+                'row_attr': {'class': 'form-group'},
+                'label_attr': {'class': 'form-label'}
+            }) }}
+        </div>
+
+        <div class="form-group">
+            {{ form_row(form.imageFile, {
+                'attr': {'class': 'form-control-file'},
+                'row_attr': {'class': 'form-group'},
+                'label_attr': {'class': 'form-label'}
+            }) }}
+        </div>
+
+        <div class="button-container">
+            <a href="{{ path('app_article_details', {id: article.id}) }}" class="button-cancel">Annuler</a>
+            <button type="submit" class="button-save">Enregistrer les modifications</button>
+        </div>
     {{ form_end(form) }}
+</div>
 {% endblock %}
