--- a/templates/articles/sell.html.twig
+++ b/templates/articles/sell.html.twig
@@ -1,84 +1,85 @@
 {% extends 'base.html.twig' %}
 
-{%{% block title %}Vendre un Article - Jeans-Lassape{% endblock %}
+{% block title %}Vendre un Article{% endblock %}
+
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('css/sell.css') }}">
 {% endblock %}
+
 {% block body %}
 <div class="sell-article-container">
     <h1>Mettre en vente un article</h1>
     
-    {{ form_start(form, {'attr': {'class': 'article-form'}}) }}
+    {% if article is defined and (app.user == article.author or is_granted('ROLE_ADMIN')) %}
+        <div class="edit-buttons">
+            <a href="{{ path('app_article_edit', {id: article.id}) }}" class="button-edit">Éditer</a>
+            <form action="{{ path('app_article_delete', {id: article.id}) }}" method="post" style="display:inline;">
+                <input type="hidden" name="_method" value="DELETE">
+                <button type="submit" class="button-delete" onclick="return confirm('Voulez-vous vraiment supprimer cet article?');">Supprimer</button>
+            </form>
+        </div>
+    {% endif %}
+    
+    {{ form_start(form) }}
         <div class="form-group">
-            {{ form_label(form.nom) }}
-            {{ form_widget(form.nom, {'attr': {'class': 'form-control'}}) }}
-            {% if form_errors(form.nom) %}
-                <div class="form-error-message">
-                    {{ form_errors(form.nom) }}
-                </div>
-            {% endif %}
+            {{ form_row(form.nom, {
+                'attr': {'class': 'form-control'},
+                'row_attr': {'class': 'form-group'},
+                'label_attr': {'class': 'form-label'}
+            }) }}
         </div>
 
         <div class="form-group">
-            {{ form_label(form.description) }}
-            {{ form_widget(form.description, {'attr': {'class': 'form-control', 'rows': 4}}) }}
-            {% if form_errors(form.description) %}
-                <div class="form-error-message">
-                    {{ form_errors(form.description) }}
-                </div>
-            {% endif %}
+            {{ form_row(form.description, {
+                'attr': {'class': 'form-control', 'rows': 4},
+                'row_attr': {'class': 'form-group'},
+                'label_attr': {'class': 'form-label'}
+            }) }}
         </div>
 
         <div class="form-group">
-            {{ form_label(form.prix) }}
-            {{ form_widget(form.prix, {'attr': {'class': 'form-control'}}) }}
-            {% if form_errors(form.prix) %}
-                <div class="form-error-message">
-                    {{ form_errors(form.prix) }}
-                </div>
-            {% endif %}
+            {{ form_row(form.prix, {
+                'attr': {'class': 'form-control'},
+                'row_attr': {'class': 'form-group'},
+                'label_attr': {'class': 'form-label'},
+                'label': 'Prix'
+            }) }}
         </div>
 
         <div class="form-group">
-            {{ form_label(form.categorie) }}
-            {{ form_widget(form.categorie, {'attr': {'class': 'form-control'}}) }}
-            {% if form_errors(form.categorie) %}
-                <div class="form-error-message">
-                    {{ form_errors(form.categorie) }}
-                </div>
-            {% endif %}
+            {{ form_row(form.categorie, {
+                'attr': {'class': 'form-control'},
+                'row_attr': {'class': 'form-group'},
+                'label_attr': {'class': 'form-label'}
+            }) }}
         </div>
 
         <div class="form-group">
-            {{ form_label(form.genre) }}
-            {{ form_widget(form.genre, {'attr': {'class': 'form-control'}}) }}
-            {% if form_errors(form.genre) %}
-                <div class="form-error-message">
-                    {{ form_errors(form.genre) }}
-                </div>
-            {% endif %}
+            {{ form_row(form.genre, {
+                'attr': {'class': 'form-control'},
+                'row_attr': {'class': 'form-group'},
+                'label_attr': {'class': 'form-label'}
+            }) }}
         </div>
 
         <div class="form-group">
-            {{ form_label(form.stock) }}
-            {{ form_widget(form.stock, {'attr': {'class': 'form-control'}}) }}
-            {% if form_errors(form.stock) %}
-                <div class="form-error-message">
-                    {{ form_errors(form.stock) }}
-                </div>
-            {% endif %}
+            {{ form_row(form.stock, {
+                'attr': {'class': 'form-control'},
+                'row_attr': {'class': 'form-group'},
+                'label_attr': {'class': 'form-label'}
+            }) }}
         </div>
 
         <div class="form-group">
-            {{ form_label(form.imageFile) }}
-            {{ form_widget(form.imageFile, {'attr': {'class': 'form-control-file'}}) }}
-            {% if form_errors(form.imageFile) %}
-                <div class="form-error-message">
-                    {{ form_errors(form.imageFile) }}
-                </div>
-            {% endif %}
->Mettre en Vente</button>
+            {{ form_row(form.imageFile, {
+                'attr': {'class': 'form-control-file'},
+                'row_attr': {'class': 'form-group'},
+                'label_attr': {'class': 'form-label'}
+            }) }}
+        </div>
+
+        <button type="submit" class="button-primary">Mettre en Vente</button>
     {{ form_end(form) }}
 </div>
 {% endblock %}
